--- a/stage2/styles/projects-styles.css
+++ b/stage2/styles/projects-styles.css
@@ -17,8 +17,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 705px;
-	margin-right: 48px;
+	width: 625px;
+	margin-right: 88px;
 }
 
 .nav-item{
@@ -108,10 +108,22 @@ ul{
 	display: block;
 }
 
+.hamburger{
+	padding: 8px;
+	display: none;
+}
+
+.burger-bar{
+	width:19px;
+	height: 3px;
+	background-color: #191e1e;
+	margin-bottom: 3px;
+}
+
 .projects-info{	
 	max-width: 1140px;
 	margin: 0 auto;
-	padding-top: 80px;
+	padding: 80px 20px 0;
 }
 
 h1{
@@ -134,7 +146,7 @@ h1{
 
 .projects-panel{
 	background-color: #ebf2f2;
-	padding: 50px 0;
+	padding: 50px 20px;
 }
 
 .flex-panel{
@@ -200,4 +212,32 @@ a{
 	text-decoration: none;
 }
 
+/*media queries*/
 
+@media (max-width: 1100px){
+	.spring-logo{
+		height: 30px;
+	}
+}
+
+@media (max-width: 1000px){
+	.flex-items{
+		width: 100%;
+	}
+}
+
+@media (max-width: 900px){
+	.nav-list{
+		display: none;
+	}
+
+	.hamburger{
+		display: block;
+	}
+}
+
+@media (max-width: 800px){
+	.flex-item{
+		width: 100%;
+	}
+}
