--- a/stage2/styles/projects-styles.css
+++ b/stage2/styles/projects-styles.css
@@ -60,7 +60,7 @@
 	color: #6db33f;
 }
 
-.nav-link:hover, .nav-link:focus{
+.nav-link:hover, .nav-link:focus, .a-wrapper:hover{
 	color: #6db33f;
 	cursor: pointer;
 }
@@ -71,7 +71,7 @@
 
 .a-wrapper{
 	margin-bottom: 30px;	
-	display: block;
+	display: inline-block;
 	color: #086dc3;
 }
 
@@ -202,7 +202,6 @@ h3{
 	font-family: Metropolis, sans-serif;
 	font-weight: 500;
 }
-
 
 h1, h3, p, span{
 	color: #191e1e;
