--- a/src/styles/projects-styles.css
+++ b/src/styles/projects-styles.css
@@ -1,442 +1,460 @@
-.nav-wrapper{
-	background-color: #fff;
-	padding: 8px 0;
-	border-bottom: 1px solid #ebf2f2;
+.nav-wrapper {
+  background-color: #fff;
+  padding: 8px 0;
+  border-bottom: 1px solid #ebf2f2;
 }
-.wrapper{
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	position: relative;
-}
-
-.nav{
-	display: flex;
-	justify-content: space-between;	
-	align-items: center;
-	margin: 0 auto;
-	max-width: 1140px;
-	padding: 0 20px;
-	position: relative;
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-
-.nav-list{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 625px;
-	margin-right: 88px;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1140px;
+  padding: 0 20px;
+  position: relative;
 }
 
-.nav-item{
-	position: relative;
-	padding: 16px 0;	
-	cursor: default; 
+.nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 625px;
+  margin-right: 88px;
 }
 
-.nav-item:hover ul, .nav-item:focus ul{
-	opacity: 1;
-	z-index: 1;
-	visibility: visible;
-	transition: all 0s linear;
+.nav-item {
+  position: relative;
+  padding: 16px 0;
+  cursor: default;
 }
 
-.dropdown{
-	position: absolute;
-	top: calc(100% + 8px);
-	left: -20px;
-	background: #fff;
-	box-shadow: 0 5px 30px 0 rgba(108,135,135,.5);
-	width: 230px;
-	border-radius: 5px;	
-	padding: 37px 30px;
-	box-sizing: border-box;
-	visibility: hidden;
-	opacity: 0;
-	transition: all 0.2s ease-out;
-	white-space: nowrap;
+.nav-item:hover ul,
+.nav-item:focus ul {
+  opacity: 1;
+  z-index: 1;
+  visibility: visible;
+  transition: all 0s linear;
 }
 
-.nav-item li{
-	margin-bottom: 10px;
-	font-family: Open Sans, sans-serif;
-	font-weight: 500;
-	font-size: 16px;
+.dropdown {
+  position: absolute;
+  top: calc(100% + 8px);
+  left: -20px;
+  background: #fff;
+  box-shadow: 0 5px 30px 0 rgba(108, 135, 135, 0.5);
+  width: 230px;
+  border-radius: 5px;
+  padding: 37px 30px;
+  box-sizing: border-box;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.2s ease-out;
+  white-space: nowrap;
 }
 
-.dropdown a:active, .dropdown a:hover, .dropdown a:focus{
-	color: #6db33f;
+.nav-item li {
+  margin-bottom: 10px;
+  font-family: Open Sans, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
 }
 
-.nav-link:hover, .nav-link:focus, .a-wrapper:hover{
-	color: #6db33f;
-	cursor: pointer;
+.dropdown a:active,
+.dropdown a:hover,
+.dropdown a:focus {
+  color: #6db33f;
 }
 
-.dropdown li>a{	
-	cursor: pointer; 
+.nav-link:hover,
+.nav-link:focus,
+.a-wrapper:hover {
+  color: #6db33f;
+  cursor: pointer;
 }
 
-.a-wrapper{
-	margin-bottom: 30px;	
-	display: inline-block;
-	color: #086dc3;
+.dropdown li > a {
+  cursor: pointer;
 }
 
-.small-font{
-	font-size: 0.8125rem;
+.a-wrapper {
+  margin-bottom: 30px;
+  display: inline-block;
+  color: #086dc3;
 }
 
-.external-link-icon{
-	width: 12px;
-	height: 12px;
+.small-font {
+  font-size: 0.8125rem;
 }
 
-.nav-list span, .nav-item{
-	font-weight: 700;
-	font-size: 0.9375rem;
-	font-family: Open Sans, sans-serif;
+.external-link-icon {
+  width: 12px;
+  height: 12px;
 }
 
-ul{
-	list-style: none;
+.nav-list span,
+.nav-item {
+  font-weight: 700;
+  font-size: 0.9375rem;
+  font-family: Open Sans, sans-serif;
 }
 
-.nav-arrow{
-	border: #191e1e solid;
-	border-width: 0 1px 1px 0;
-	display: inline-block;
-	padding: 3px;
-	margin-left: 5px;
-	transform: rotate(45deg) translateY(-6px);
+ul {
+  list-style: none;
 }
 
-.spring-logo{
-	height: 48px;
-	display: block;
+.nav-arrow {
+  border: #191e1e solid;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-left: 5px;
+  transform: rotate(45deg) scale(1) translateY(-6px);
 }
 
-.hamburger{
-	cursor: pointer;
-	padding: 8px;
-	display: none;
-	z-index: 5;
+.spring-logo {
+  height: 48px;
+  display: block;
 }
 
-.burger-bar{
-	width:19px;
-	height: 3px;
-	background-color: #191e1e;
-	margin-bottom: 3px;
+.hamburger {
+  cursor: pointer;
+  padding: 8px;
+  display: none;
+  z-index: 5;
 }
 
-.projects-info{	
-	max-width: 1140px;
-	margin: 0 auto;
-	padding: 80px 20px 0;
+.burger-bar {
+  width: 19px;
+  height: 3px;
+  background-color: #191e1e;
+  margin-bottom: 3px;
 }
 
-h1{
-	font-size: 60px;
-	font-family: Metropolis, sans-serif;
-	line-height: 60px;
-	font-weight: 500;
-	margin: 24px 0 10px;
+.projects-info {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 80px 20px 0;
 }
 
-.projects-info p{
-	font-family: Metropolis, sans-serif;
-	font-size: 24px;
-	font-weight: 400;
-	line-height: 40px;
-	max-width: 1040px;
-	margin: 24px 0 80px;
-	color: #333;
+h1 {
+  font-size: 60px;
+  font-family: Metropolis, sans-serif;
+  line-height: 60px;
+  font-weight: 500;
+  margin: 24px 0 10px;
 }
 
-.projects-panel{
-	background-color: #ebf2f2;
-	padding: 50px 20px;
-	flex-grow: 1;
-	flex-basis: 100%;
+.projects-info p {
+  font-family: Metropolis, sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 40px;
+  max-width: 1040px;
+  margin: 24px 0 80px;
+  color: #333;
 }
 
-.search-form-container{
-	max-width: 1140px;
-	margin: 0 auto 25px;
+.projects-panel {
+  background-color: #ebf2f2;
+  padding: 50px 20px;
+  flex-grow: 1;
+  flex-basis: 100%;
 }
 
-.search-form{
-	width: 82%;
+.search-form-container {
+  max-width: 1140px;
+  margin: 0 auto 25px;
 }
 
-.search-input{
-	width: 100%;
-	color: #333;
-	padding: 0 8px;
-	height: 40px;
-	border: none;
-	box-sizing: border-box;	
-	border-radius: 5px;
+.search-form {
+  width: 82%;
 }
 
-.search-input:focus-visible{	
-	outline: none;
-	box-shadow: 0 10px 20px 0 rgb(108 135 135 / 20%);
+.search-input {
+  width: 100%;
+  color: #333;
+  padding: 0 8px;
+  height: 40px;
+  border: none;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
-.search-icon{
-	position: relative;
-}
-.search-icon::before{
-	content: "";
-	background: url("../assets/images/logo.svg") no-repeat;
-	background-size: contain;
-	left: calc(100% - 36px);
-	top: 6px;
-	position: absolute;
-	width: 28px;
-	height: 28px;
+.search-input:focus-visible {
+  outline: none;
+  box-shadow: 0 10px 20px 0 rgb(108 135 135 / 20%);
 }
 
-.flex-panel{
-	max-width: 1140px;
-	margin: 0 auto;
+.search-icon {
+  position: relative;
+}
+.search-icon::before {
+  content: "";
+  background: url("../assets/images/logo.svg") no-repeat;
+  background-size: contain;
+  left: calc(100% - 36px);
+  top: 6px;
+  position: absolute;
+  width: 28px;
+  height: 28px;
 }
 
-.flex-items{
-	display: flex;
-	justify-content: space-between;
-	width: 82%;
-	margin-right: 0;
-	margin-left: auto;
-	flex-wrap: wrap;	
+.flex-panel {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
-.flex-item{
-	display: flex;
-	justify-content: space-between;
-	width: 48.5%;
-	padding: 40px 30px;
-	box-sizing: border-box;
-	background-color: #fff;
-	margin-bottom: 25px;
-	border: 1px solid #d9e9e9;
-	border-radius: 5px;
+.flex-items {
+  display: flex;
+  justify-content: space-between;
+  width: 82%;
+  margin-right: 0;
+  margin-left: auto;
+  flex-wrap: wrap;
 }
 
-.flex-item:hover{
-	transform: translateY(-3px);
-	box-shadow: 0 10px 20px 0 rgb(108 135 135 / 20%);
+.flex-item {
+  display: flex;
+  justify-content: space-between;
+  width: 48.5%;
+  padding: 40px 30px;
+  box-sizing: border-box;
+  background-color: #fff;
+  margin-bottom: 25px;
+  border: 1px solid #d9e9e9;
+  border-radius: 5px;
 }
 
-.flex-item p{
-	line-height: 1.7;
-	color: #333;
-	font-family: Open Sans, sans-serif;
-	margin: 16px 0;
+.flex-item:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px 0 rgb(108 135 135 / 20%);
 }
 
-.no-result{
-	width: 100%;
-	color: #333;
-	font-size: 20px;
-	text-align: end;
-	display: block;
-	padding: 10px 8px;
-	text-transform: uppercase;
-	font-family: Open Sans, sans-serif;
+.flex-item p {
+  line-height: 1.7;
+  color: #333;
+  font-family: Open Sans, sans-serif;
+  margin: 16px 0;
 }
 
-.project-icon{
-	height: 60px;
-	max-width: 18.5%;
-	align-self: flex-start;
+.no-result {
+  width: 100%;
+  color: #333;
+  font-size: 20px;
+  text-align: end;
+  display: block;
+  padding: 10px 8px;
+  text-transform: uppercase;
+  font-family: Open Sans, sans-serif;
 }
 
-.project-text{
-	width: 76.5%;
+.project-icon {
+  height: 60px;
+  max-width: 18.5%;
+  align-self: flex-start;
 }
 
-h3{
-	font-size: 1.5em;
-	font-family: Metropolis, sans-serif;
-	font-weight: 500;
+.project-text {
+  width: 76.5%;
 }
 
-h1, h3, p, span{
-	color: #191e1e;
+h3 {
+  font-size: 1.5em;
+  font-family: Metropolis, sans-serif;
+  font-weight: 500;
 }
 
-a{
-	text-decoration: none;
+h1,
+h3,
+p,
+span {
+  color: #191e1e;
 }
 
-.nav-list-mobile{		
-	transform: translateY(-100%);
+a {
+  text-decoration: none;
+}
+
+.nav-list-mobile {
+  transform: translateY(-100%);
 }
 
 /*media queries*/
 
-@media (max-width: 1100px){
-	.spring-logo{
-		height: 30px;
-	}
+@media (max-width: 1100px) {
+  .spring-logo {
+    height: 30px;
+  }
 }
 
-@media (max-width: 1000px){
-	.flex-items, .search-form{
-		width: 100%;
-	}
+@media (max-width: 1000px) {
+  .flex-items,
+  .search-form {
+    width: 100%;
+  }
 
-	.projects-panel{
-		padding-top: 25px;
-	}
+  .projects-panel {
+    padding-top: 25px;
+  }
 }
 
-@media (max-width: 900px){
-	.nav-list{
-		display: none;
-	}
+@media (max-width: 900px) {
+  .nav-list {
+    display: none;
+  }
 
-	.nav-arrow{
-		border: solid #98afae;
-		border-width: 0 2px 2px 0;
-		padding: 5px;
-		margin-right: 7px;
-		margin-left: 0;
-	}
+  .nav-arrow {
+    border: solid #98afae;
+    border-width: 0 2px 2px 0;
+    padding: 5px;
+    margin-right: 7px;
+    margin-left: 0;
+    transition: transform 0.2s ease-out;
+    transform: rotate(45deg) scale(1);
+  }
 
-	#navMobile.display{
-		transform: translateY(-100%);
-	}
+  #navMobile.display {
+    transform: translateY(-100%);
+  }
 
-	.hamburger{
-		display: block;
-	}
+  .hamburger {
+    display: block;
+  }
 
-	header{
-		position: fixed;
-		width: 100%;
-		z-index: 2;
-	}
+  header {
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+  }
 
-	.nav-list-mobile{		
-		transform: translateY(0);
-	}
+  .nav-list-mobile {
+    transform: translateY(0);
+  }
 
-	.list-container, .nav-link{
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		padding: 15px 0;		
-		border-bottom: 1px solid #666;
-	}
-	.list-container{
-		margin-bottom: 15px;
-	}
-	.nav-item{
-		padding: 0;
-	}
+  .list-container,
+  .nav-link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0;
+    border-bottom: 1px solid #666;
+  }
+  .list-container {
+    margin-bottom: 15px;
+  }
+  .nav-item {
+    padding: 0;
+  }
 }
 
-@media (max-width: 800px){
-	.flex-item{
-		width: 100%;
-	}
-	
-	.project-icon{
-		height: auto;
-		max-height: 60px;
-	}
+@media (max-width: 800px) {
+  .flex-item {
+    width: 100%;
+  }
 
-	.projects-info p{
-		font-size: 20px;
-		line-height: 1.7em;
-		margin-bottom: 50px;
-	}
-	
-	h1{
-		font-size: 3rem;
-		line-height: 1em;
-	}
+  .project-icon {
+    height: auto;
+    max-height: 60px;
+  }
 
-	h3{
-		font-size: 1.25rem;
-	}
+  .projects-info p {
+    font-size: 20px;
+    line-height: 1.7em;
+    margin-bottom: 50px;
+  }
 
-	.flex-item p{
-		font-size: 14px;
-	}
+  h1 {
+    font-size: 3rem;
+    line-height: 1em;
+  }
 
+  h3 {
+    font-size: 1.25rem;
+  }
+
+  .flex-item p {
+    font-size: 14px;
+  }
 }
 
 /*mobile */
 
-.nav-list-mobile{
-	overflow-y: scroll;
-	position: fixed;
-	height: 100%;
-	width: 100%;
-	top:0;
-	left: 0;
-	background-color: #191e1e;
-	z-index: 3;
-	padding: 40px 60px;
-	transition: transform .35s cubic-bezier(.694,0,.335,1);
-	box-sizing: border-box;
+.nav-list-mobile {
+  overflow-y: scroll;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #191e1e;
+  z-index: 3;
+  padding: 40px 60px;
+  transition: transform 0.35s cubic-bezier(0.694, 0, 0.335, 1);
+  box-sizing: border-box;
 }
 
-.nav-list-mobile .nav-item span, .nav-list-mobile .nav-item{
-	color: #fff;
-	font-size: 25px;
-	font-weight: 600;
+.nav-list-mobile .nav-item span,
+.nav-list-mobile .nav-item {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 600;
 }
 
-.burger-bar-1{
-	transform: rotate(45deg);
-	background-color: #fff;
-	width: 23px;
-	height: 1px;
-	position: relative;
-	bottom: -6px;
+.burger-bar-1 {
+  transform: rotate(45deg);
+  background-color: #fff;
+  width: 23px;
+  height: 1px;
+  position: relative;
+  bottom: -6px;
 }
 
-.burger-bar-2{
-	transform: rotate(-45deg);
-	background-color: #fff;
-	width: 23px;
-	height: 1px;
-	position: relative;
-	bottom: -2px;
+.burger-bar-2 {
+  transform: rotate(-45deg);
+  background-color: #fff;
+  width: 23px;
+  height: 1px;
+  position: relative;
+  bottom: -2px;
 }
 
-.burger-bar-3{
-	transform: scale(0);
+.burger-bar-3 {
+  transform: scale(0);
 }
 
-.absolute{
-	position: absolute;
+.absolute {
+  position: absolute;
 }
 
-.dropdownMobile{
-	overflow: hidden;
+.dropdownMobile {
+  overflow: hidden;
 }
 
-.dropdownMobile a{
-	color: #98afae;
-	font-size: 20px;
+.dropdownMobile a {
+  color: #98afae;
+  font-size: 20px;
 }
 
-.dropdownMobile a:active, .dropdownMobile a:hover, .dropdownMobile a:focus{
-	color: #6db33f;
+.dropdownMobile a:active,
+.dropdownMobile a:hover,
+.dropdownMobile a:focus {
+  color: #6db33f;
 }
 
-.dropdownMobile li>a{	
-	cursor: pointer; 
+.dropdownMobile li > a {
+  cursor: pointer;
 }
 
-.display{
-	display: none;
+.display {
+  display: none;
+}
+
+.nav-arrow-scale {
+  transform: rotate(45deg) scale(-1);
 }
