--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -1,16 +1,16 @@
-.login-section {
+.user-form-section {
   background-color: #ebf2f2;
   flex-grow: 1;
   flex-basis: 100%;
 }
 
-.login-form-wrapper {
+.user-form-wrapper {
   max-width: 1140px;
   margin: 0px auto;
   text-align: center;
 }
 
-.login-form {
+.user-form {
   width: 48.5%;
   padding: 40px 30px;
   box-sizing: border-box;
@@ -71,9 +71,26 @@
 .form-title {
   margin: 24px 0;
 }
+.form-link-wrapper {
+  font-family: Metropolis, sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding-top: 16px;
+  font-weight: 400;
+}
+
+.form-link {
+  color: #6db33f;
+  cursor: pointer;
+}
+
+.errorMessage {
+  color: rgb(210, 95, 95);
+  font-size: 16px;
+}
 
 @media (max-width: 900px) {
-  .login-form {
+  .user-form {
     width: 82.5%;
   }
 }
