--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -142,6 +142,16 @@ header {
   transform: scale(0);
 }
 
+.logout-image {
+  width: 40px;
+  height: 68px;
+}
+
+.nav-icons-wrapper,
+.nav-block {
+  display: flex;
+}
+
 .dropdown-mobile {
   overflow: hidden;
 }
@@ -186,6 +196,11 @@ header {
 
   .hamburger {
     display: block;
+  }
+
+  .logout-image {
+    width: 34px;
+    height: auto;
   }
 
   header {
