--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -49,7 +49,8 @@
   border-bottom: 2px solid #6db33f;
 }
 
-.form-submit-button {
+.form-submit-button,
+.form-button {
   margin: 20px auto 0px;
   width: 48.2%;
   padding: 8px 0;
@@ -62,10 +63,18 @@
 }
 
 .form-submit-button:hover,
+.form-button:hover,
 .form-submit-button:focus,
-.form-submit-button:active {
+.form-button:focus,
+.form-submit-button:active,
+.form-button:active {
   box-shadow: 1px 1px 10px 10px rgb(108 135 135 / 20%) inset;
   cursor: pointer;
+}
+
+.form-button {
+  width: 100%;
+  margin: 0 auto;
 }
 
 .form-title {
@@ -84,6 +93,80 @@
   cursor: pointer;
 }
 
+.form-select-input {
+  border: none;
+  border-bottom: 2px solid #d9e9e9;
+  font-family: Metropolis, sans-serif;
+  width: 100%;
+  font-size: 18px;
+  color: #333;
+  padding-left: 8px;
+  height: 40px;
+  outline: none;
+}
+
+.form-radio-wrapper {
+  font-family: Metropolis, sans-serif;
+  font-size: 24px;
+  color: #333;
+  text-align: left;
+  margin: 16px 0;
+}
+
+input[type="radio"] {
+  position: relative;
+  height: 10px;
+  width: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  padding-left: 18px;
+}
+
+input[type="radio"]::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 2px solid #6db33f;
+}
+
+input[type="radio"]:checked::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #6db33f;
+  transform: translate(-50%, -50%);
+  visibility: visible;
+}
+
+.employee-wrapper {
+  font-size: 16px;
+  margin: 8px auto;
+  padding: 16px;
+  border: 2px solid #6db33f;
+  border-radius: 8px;
+  box-sizing: border-box;
+}
+
+.employee-wrapper .form-label {
+  font-size: 18px;
+}
+
+.employee-wrapper .form-input {
+  height: 30px;
+  font-size: 18px;
+}
 .errorMessage {
   color: rgb(210, 95, 95);
   font-size: 16px;
